实现轻量 ReID：仅在匹配冲突时启用特征约束，减少 ID 抖动；补充 ID 切换统计写入 stats.json 运行稳定性提升：Session 停止加入软/硬两阶段与耗时记录，强制释放摄像头/音频 预览与缩略图优化：预览保持宽高比，缩略图在同一流水线生成，刷新频率随预览帧率联动 Web 服务优化：空闲自动降频；事件队列支持 frame_data 合并与统计 语言一致性：session_config.json 持久化语言/模式；ASR/转录/总结写入语言标记 配置集中：新增 config.py 统一解析 web/session/lite 配置 Lite UI：中英切换、日夜模式、报告标签与缩略图展示完善 新增/更新单测：覆盖语言解析、session meta 合并、缩略图刷新逻辑等 如果要，我可以直接给你一个简短的 commit message。

--- a/web/viz_lite.html
+++ b/web/viz_lite.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,24 +12,46 @@
         <div class="brand">
           <div class="logo" aria-hidden="true">CF</div>
           <div class="brand-text">
-            <div class="title">Focus Monitor Lite</div>
-            <div class="subtitle">Low-resource status view (no video preview)</div>
+            <div class="title" data-i18n="Focus Monitor Lite">Focus Monitor Lite</div>
+            <div class="subtitle" data-i18n="Low-resource status view (no video preview)">Low-resource status view (no video preview)</div>
           </div>
         </div>
         <div class="actions">
-          <div class="pill" role="status" aria-live="polite">
-            <span class="dot" id="wsDot" aria-hidden="true"></span>
-            <span id="wsText">disconnected</span>
-          </div>
-          <div class="pill" role="status" aria-live="polite">
-            <span class="dot" id="recDot" aria-hidden="true"></span>
-            <span id="recText">idle</span>
-            <span class="mono" id="sessionId"></span>
+          <div class="status-group">
+            <div class="pill" role="status" aria-live="polite">
+              <span class="dot" id="wsDot" aria-hidden="true"></span>
+              <span id="wsText">disconnected</span>
+            </div>
+            <div class="pill" role="status" aria-live="polite">
+              <span class="dot" id="recDot" aria-hidden="true"></span>
+              <span id="recText">idle</span>
+              <span class="mono" id="sessionId"></span>
+            </div>
           </div>
           <div class="btn-group">
-            <button class="btn primary" id="btnStart">Start</button>
-            <button class="btn" id="btnStop" disabled>Stop</button>
-            <button class="btn ghost" id="btnReport" disabled>Generate Report</button>
+            <button class="btn primary" id="btnStart" data-i18n="开始录制">Start</button>
+            <button class="btn" id="btnStop" disabled data-i18n="停止">Stop</button>
+            <button class="btn ghost" id="btnReport" disabled data-i18n="生成报告">Generate Report</button>
+          </div>
+          <div class="control-group">
+            <div class="select-pill">
+              <span class="label" data-i18n="界面语言">界面语言</span>
+              <select id="langSelect" aria-label="UI language" data-i18n-aria-label="界面语言">
+                <option value="zh" data-i18n="中文">中文</option>
+                <option value="en" data-i18n="English">English</option>
+              </select>
+            </div>
+            <div class="select-pill">
+              <span class="label" data-i18n="课堂语言">课堂语言</span>
+              <select id="classLangSelect" aria-label="Class language" data-i18n-aria-label="课堂语言">
+                <option value="zh" data-i18n="中文">中文</option>
+                <option value="en" data-i18n="English">English</option>
+              </select>
+            </div>
+            <button class="btn ghost" id="btnThemeToggle" title="切换主题" data-i18n-title="切换主题">
+              <span class="theme-icon" id="themeIcon">☾</span>
+              <span id="themeText">夜间</span>
+            </button>
           </div>
         </div>
       </header>
@@ -37,7 +59,7 @@
       <main class="content">
         <section class="panel">
           <div class="panel-head">
-            <div class="panel-title">Detected Faces</div>
+            <div class="panel-title" data-i18n="Detected Faces">Detected Faces</div>
             <div class="panel-meta">
               <span id="faceCount">0</span>
               <span class="meta-sep">/</span>
@@ -45,17 +67,17 @@
             </div>
           </div>
           <div class="face-list" id="faceList" role="list">
-            <div class="empty" id="emptyState">Waiting for detections...</div>
+            <div class="empty" id="emptyState" data-i18n="Waiting for detections...">Waiting for detections...</div>
           </div>
         </section>
 
         <section class="panel report-panel is-hidden" id="reportPanel">
           <div class="panel-head">
-            <div class="panel-title">Report</div>
+            <div class="panel-title" data-i18n="Report">Report</div>
             <div class="panel-meta" id="reportMeta">Idle</div>
           </div>
           <div class="report-body">
-            <div class="muted" id="reportStatus">No report running.</div>
+            <div class="muted" id="reportStatus" data-i18n="No report running.">No report running.</div>
             <div class="report-links" id="reportLinks"></div>
           </div>
         </section>
